--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -1,4 +1,5 @@
 Key,Text
+name,عربي
 Welcome,توفر هذه الأداة تسهيلات كبيرة في عملية تثبيت البرامج وتحسين الاداء. انضم إلينا لتساهم في تطويرها وجعلها أكثر اكتمالًا
 sysinfo,معلومات النظام
 PowerOptions,خيارات الطاقة
@@ -21,7 +22,7 @@ settings,إعدادات
 saveapps,حفظ البرامج
 loadapps,أسترجاع البرامج
 music,الموسيقى
-on,تشغيل 
+on,"تشغيل "
 off,كتم
 Dark,ليلا
 Light,نهارا
