--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -1,5 +1,6 @@
 Key,Text
-Welcome,Экономьте время, устанавливая несколько программ одновременно и улучшая производительность Windows. Присоединяйтесь к нам в улучшении этого инструмента и сделайте его лучше.
+name,Русский
+Welcome,Экономьте время устанавливая несколько программ одновременно и улучшая производительность Windows. Присоединяйтесь к нам в улучшении этого инструмента и сделайте его лучше.
 sysinfo,Информация о системе
 PowerOptions,Питание
 devicemgr,Диспетчер устройств
@@ -28,7 +29,7 @@ Dark,Темная
 Light,Светлая
 defaultTheme,Системная
 ittlink,Создать ярлык на рабочем столе
-reopen,Пожалуйста, снова откройте ITT.
+reopen,Пожалуйста снова откройте ITT.
 theme,Тема
 language,Язык
 mas,Скрипты активации Microsoft (MAS)
@@ -42,13 +43,13 @@ InstallMessage,Хотите установить выбранные прилож
 ApplyMessage,Хотите применить выбранные настройки?
 installing,Установка..
 Applying,Применение..
-choseapp,Выберите хотя бы одно приложение для установки
-chosetweak,Пожалуйста, подождите, пока будут применены настройки
-pleasewait,Пожалуйста, подождите, идет процесс на заднем плане.
+choseapp,Выберите хотя бы одно приложение для установки устанавливая несколько программ одновременно и улучшая производительность Windows. Присоединяйтесь к нам в улучшении этого инструмента и сделайте его лучше.
+chosetweak,Пожалуйста подождите устанавливая несколько программ одновременно и улучшая производительность Windows. Присоединяйтесь к нам в улучшении этого инструмента и сделайте его лучше.
+pleasewait,Пожалуйста подождите
 lastupdate,Последнее обновление
 sourcecode,Исходный код
 devby,Сделано с ♥ Emad Adel
-exit,Вы уверены, что хотите закрыть программу? Если есть установки, они будут прерваны.
+exit,Вы уверены что хотите закрыть программу? Если есть установки
 watchdemo,Добро пожаловать
-happybirthday,С днем рождения, Emad!
+happybirthday,С днем рождения Emad!
 myplaylist,Мой день рождения и мой плейлист ♪
