--- a/locales/ko.csv
+++ b/locales/ko.csv
@@ -1,4 +1,5 @@
 Key,Text
+name,한국어
 Welcome,여러 프로그램을 한 번에 설치하여 시간을 절약하고 Windows 성능을 향상시킵니다. 도구를 개선하고 우리와 함께 훌륭하게 만들어 보세요.
 sysinfo,시스템 정보
 PowerOptions,전원 옵션
