--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -1,55 +1,55 @@
 Key,Text
 name,Русский
-Welcome,Экономьте время устанавливая несколько программ одновременно и улучшая производительность Windows. Присоединяйтесь к нам в улучшении этого инструмента и сделайте его лучше.
-sysinfo,Информация о системе
-PowerOptions,Питание
-devicemgr,Диспетчер устройств
-services,Службы
-networks,Сети
-appsfeatures,Особенности приложений
-taskmgr,Диспетчер задач
-diskmgr,Управление дисками
+Welcome,Сэкономьте время устанавливая несколько программ одновременно и улучшите производительность Windows. Присоединяйтесь к нам для улучшения этого инструмента и его совершенствования. Вы также можете добавить свои любимые музыкальные приложения и настройки.
 installBtn,Установить
 applyBtn,Применить
-downloading,Загрузка
-about,О программе
-thirdparty,Сторонние приложения
+downloading,Загрузка...
+about,О нас
+thirdparty,Сторонние
 preferences,Настройки
 management,Управление
 apps,Приложения
 tweaks,Настройки
-settings,Настройки
-saveapps,Сохранить выбранные приложения
-loadapps,Восстановить выбранные приложения
+settings,Параметры
+saveapps,Сохранить
+loadapps,Восстановить
 music,Музыка
-on,Включить
-reset,Сбросить настройки
-off,Выключить
-Dark,Темная
-Light,Светлая
-defaultTheme,Системная
+on,"Вкл "
+off,Выкл
+diskmgr,Управление дисками
+taskmgr,Диспетчер задач
+appsfeatures,Приложения-Функции
+networks,Сети
+services,Сервисы
+devicemgr,Диспетчер устройств
+PowerOptions,Энергопитание
+sysinfo,Информация о системе
+defaultTheme,Использовать системные настройки
 ittlink,Создать ярлык на рабочем столе
-reopen,Пожалуйста снова откройте ITT.
+reset,Сбросить настройки
+reopen,Пожалуйста перезапустите ITT.
 theme,Тема
 language,Язык
-mas,Скрипты активации Microsoft (MAS)
-winoffice,Скачать Windows / Office ISO
+mas,Microsoft Activation Scripts (MAS)
+winoffice,Скачать ISO Windows / Office
 idm,Активация IDM
-extensions,Расширения браузера
+extensions,Расширения для браузеров
 all,Все
+search,Поиск
 restorepoint,Создать точку восстановления
-chocoloc,Портативная папка загрузок
-InstallMessage,Хотите установить выбранные приложения?
-ApplyMessage,Хотите применить выбранные настройки?
-installing,Установка..
-Applying,Применение..
-choseapp,Выберите хотя бы одно приложение для установки устанавливая несколько программ одновременно и улучшая производительность Windows. Присоединяйтесь к нам в улучшении этого инструмента и сделайте его лучше.
-chosetweak,Пожалуйста подождите устанавливая несколько программ одновременно и улучшая производительность Windows. Присоединяйтесь к нам в улучшении этого инструмента и сделайте его лучше.
-pleasewait,Пожалуйста подождите
+chocoloc,Папка для портативных загрузок
+InstallMessage,Вы уверены что хотите установить следующие приложения?
+ApplyMessage,Вы уверены что хотите применить следующие настройки?
+Applying,Применение...
+choseapp,Выберите хотя бы одно приложение для установки.
+chosetweak,Выберите хотя бы одну настройку для применения.
+pleasewait,Подождите выполняется фоновый процесс.
 lastupdate,Последнее обновление
 sourcecode,Исходный код
 devby,Сделано с ♥ Emad Adel
-exit,Вы уверены что хотите закрыть программу? Если есть установки
+exit,Вы уверены что хотите закрыть программу? Все установки будут прерваны.
 watchdemo,Добро пожаловать
-happybirthday,С днем рождения Emad!
-myplaylist,Мой день рождения и мой плейлист ♪
+happybirthday,С Днем Рождения меня!
+myplaylist,Это мой день рождения и мой плейлист ♪
+OneAppReq,Выберите хотя бы одно приложение для сохранения.
+contributors,Соавторы
