--- a/locales/tr.csv
+++ b/locales/tr.csv
@@ -1,55 +1,55 @@
 Key,Text
 name,Türkçe
-Welcome,Birden fazla programı tek seferde kurarak zaman kazanın ve Windows performansınızı artırın. Aracı iyileştirmemize katılın ve harika yapalım.
-sysinfo,Sistem Bilgisi
-PowerOptions,Güç Seçenekleri
-devicemgr,Cihaz Yöneticisi
-services,Hizmetler
-networks,Ağlar
-appsfeatures,Uygulamalar-Özellikler
-taskmgr,Görev Yöneticisi
-diskmgr,Disk Yönetimi
+Welcome,Birden fazla programı aynı anda yükleyerek zaman kazanın ve Windows performansınızı artırın. Bu aracı geliştirmek ve daha da iyileştirmek için bize katılın. Ayrıca favori müzik uygulamalarınızı ve ayarlarınızı da ekleyebilirsiniz.
 installBtn,Yükle
 applyBtn,Uygula
-downloading,İndiriliyor
+downloading,İndiriliyor...
 about,Hakkında
 thirdparty,Üçüncü Taraf
 preferences,Tercihler
 management,Yönetim
 apps,Uygulamalar
-tweaks,Düzeltmeler
+tweaks,İnce Ayarlar
 settings,Ayarlar
-saveapps,Seçili uygulamaları kaydet
-loadapps,Seçili uygulamaları geri yükle
+saveapps,Kayıt Et
+loadapps,Geri Yükle
 music,Müzik
-on,Aç
-off,Kapat
-Dark,Koyu
-reset,Tercihleri Sıfırla
-Light,Açık
-defaultTheme,Sistem
+on,"Açık "
+off,Kapalı
+diskmgr,Disk Yönetimi
+taskmgr,Görev Yöneticisi
+appsfeatures,Uygulamalar-Özellikler
+networks,Ağlar
+services,Hizmetler
+devicemgr,Aygıt Yöneticisi
+PowerOptions,Güç Seçenekleri
+sysinfo,Sistem Bilgisi
+defaultTheme,Sistem ayarlarını kullan
 ittlink,Masaüstü kısayolu oluştur
+reset,Tercihleri sıfırla
 reopen,Lütfen ITT'yi tekrar açın.
 theme,Tema
 language,Dil
-mas,Microsoft Aktivasyon Komut Dosyaları (MAS)
+mas,Microsoft Etkinleştirme Betikleri (MAS)
 winoffice,Windows / Office ISO İndir
-idm,IDM Aktivasyonu
+idm,IDM Etkinleştirme
 extensions,Tarayıcı Eklentileri
-all,Tüm
+all,Tümü
+search,Ara
 restorepoint,Geri yükleme noktası oluştur
 chocoloc,Taşınabilir İndirilenler Klasörü
-InstallMessage,Seçilen uygulamaları yüklemek istiyor musunuz
-ApplyMessage,Seçilen düzeltmeleri uygulamak istiyor musunuz
-installing,Yükleniyor..
-Applying,Uygulanıyor..
-choseapp,Lütfen kurulacak en az bir uygulama seçin
-chosetweak,Düzeltmelerin uygulanmasını bekleyin
-pleasewait,Lütfen bekleyin arka planda bir işlem var.
+InstallMessage,Aşağıdaki uygulamaları yüklemek istediğinizden emin misiniz?
+ApplyMessage,Aşağıdaki ayarları uygulamak istediğinizden emin misiniz?
+Applying,Uygulanıyor...
+choseapp,Lütfen yüklemek için en az bir uygulama seçin.
+chosetweak,Lütfen uygulamak için en az bir ince ayar seçin.
+pleasewait,Lütfen bekleyin arka planda bir işlem çalışıyor.
 lastupdate,Son güncelleme
-sourcecode,Kaynak Kod
+sourcecode,Kaynak Kodu
 devby,Emad Adel tarafından ♥ ile yapıldı
-exit,Programı kapatmak istediğinizden emin misiniz? Eğer herhangi bir yükleme işlemi varsa kesilecektir.
-watchdemo,Hoş Geldiniz
-happybirthday,Günün Kutlu Olsun Emad!
-myplaylist,Bugün Benim Doğum Günüm ve Benim Çalma Listem ♪
+exit,Programı kapatmak istediğinizden emin misiniz? Herhangi bir kurulum varsa durdurulacak.
+watchdemo,Hoş geldiniz
+happybirthday,Kendime Mutlu Yıllar!
+myplaylist,Benim Doğum Günüm ve Benim Çalma Listem ♪
+OneAppReq,Kaydetmek için en az bir uygulama seçin.
+contributors,Katkıda Bulunanlar
