--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -54,3 +54,4 @@ watchdemo,مرحبا بك
 happybirthday,!عيد ميلاد سعيد عماد
 myplaylist,انه عيد ميلادي و قائمة الموسيقى الخاصة بي
 OneAppReq,يرجى اختيار تطبيق واحد على الاقل لحفظه
+syslang,استخدم لغة النظام
