--- a/locales/de.csv
+++ b/locales/de.csv
@@ -53,3 +53,4 @@ happybirthday,Alles Gute zum Geburtstag mir!
 myplaylist,Es ist mein Geburtstag und meine Playlist ♪
 OneAppReq,Wählen Sie mindestens eine App zum Speichern aus.
 contributors,Mitwirkende
+syslang,Systemsprache
