--- a/locales/en.csv
+++ b/locales/en.csv
@@ -52,3 +52,4 @@ watchdemo,Welcome
 happybirthday,Happy Birthday to me!
 myplaylist,It's my Birthday and My Playlist ♪
 OneAppReq,Choose at least one app to save it
+syslang,System language
