--- a/locales/es.csv
+++ b/locales/es.csv
@@ -53,3 +53,4 @@ happybirthday,¡Feliz cumpleaños a mí!
 myplaylist,Es mi cumpleaños y mi lista de reproducción ♪
 OneAppReq,Elige al menos una aplicación para guardarla.
 contributors,Colaboradores
+syslang,Idioma del sistema
