--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -53,3 +53,5 @@ happybirthday,Joyeux anniversaire à moi !
 myplaylist,C'est mon anniversaire et ma playlist ♪
 OneAppReq,Choisissez au moins une application à sauvegarder.
 contributors,Contributeurs
+syslang,Langue du système
+
