--- a/locales/ga.csv
+++ b/locales/ga.csv
@@ -52,3 +52,4 @@ watchdemo,Fáilte
 happybirthday,Breithlá Shona domsa!
 myplaylist,Is é mo Bhreithlá é agus Mo Phléaráca ♪
 OneAppReq,Roghnaigh ar a laghad aip amháin chun é a shábháil
+syslang,Teanga an chórais
