--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -53,3 +53,4 @@ happybirthday,С Днем Рождения меня!
 myplaylist,Это мой день рождения и мой плейлист ♪
 OneAppReq,Выберите хотя бы одно приложение для сохранения.
 contributors,Соавторы
+syslang,Язык системы
