--- a/locales/tr.csv
+++ b/locales/tr.csv
@@ -53,3 +53,4 @@ happybirthday,Kendime Mutlu Yıllar!
 myplaylist,Benim Doğum Günüm ve Benim Çalma Listem ♪
 OneAppReq,Kaydetmek için en az bir uygulama seçin.
 contributors,Katkıda Bulunanlar
+syslang,Sistem dili
