--- a/locales/ga.csv
+++ b/locales/ga.csv
@@ -1,5 +1,5 @@
 Key,Text
-name,Irish
+name,Gaeilge
 Welcome,Sábháil am trí níos mó ná clár amháin a shuiteáil ag an am céanna agus feabhsaigh feidhmíocht do Windows. Bí linn ag feabhsú an uirlis seo agus ag déanamh é níos fearr. Is féidir leat do chuid apps ceoil agus feabhsúcháin is fearr leat a chur leis freisin.
 installBtn,Suiteáil
 applyBtn,Cuir i bhfeidhm
